--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Vladislav Kardash
-logo: /assets/img/bigboy.jpg
+#logo: /assets/img/bigboy.jpg
 description: big boy
 show_downloads: true
 theme: jekyll-theme-minimal
